test/expected/typedef_ai.out
typedef auto int SI
             ^
14: error: "typedef auto int" is illegal for built-in type
